# portfolio

client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  type.ts
client/src/Robot/: ChatPanel.css  ChatPanel.tsx  RobotBase.css  RobotBase.tsx  RobotLab.css  RobotLab.tsx  RobotOffice.css  RobotOffice.tsx  SpeechBubble.css  SpeechBubble.tsx  types.ts
client/src/Robot/commands/: labCommands.ts  officeCommands.ts
client/src/Scene/Horizon/: ArcTimeSlider.css  ArcTimeSlider.tsx  DayNightContext.tsx  GrassShader.css  GrassShader.tsx  Horizon.css  Horizon.tsx  HorizonDoor.css  HorizonDoor.tsx  TimeWheel.css  TimeWheel.tsx
client/src/Scene/Lab/: CanvasControls.css  CanvasControls.tsx  (+30 more)
server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: handlers.rs  main.rs  models.rs
src/: App.css  App.tsx  Calendar.css  Calendar.tsx  Clock.css  Clock.tsx  Door.css  Door.tsx  Lab3D.css  Lab3D.tsx  LabTerminal.tsx  Lamp.tsx  Office.tsx  RobotPersona.tsx
src/Robot/: RobotBase.tsx  RobotContext.tsx  RobotLab.css  RobotLab.tsx  RobotOffice.tsx  SpeechBubble.css  SpeechBubble.tsx  types.ts
src/Robot/commands/: labCommands.ts
src/RobotPersona/: ChatPanel.css  ChatPanel.tsx  RobotPersona.css  RobotPersona.tsx  SpeechBubble.css  SpeechBubble.tsx
src/Scene/Lab/: CanvasControls.css  CanvasControls.tsx  DraggableTerminal.tsx  HelpTerminal.tsx  Lab3D.tsx  LabCanvas.css  LabCanvas.tsx  LabContext.tsx  LabTerminal.css  LabTerminal.tsx  LabTerminals.tsx  ShaderControls.css  ShaderControls.tsx  WaveShader.tsx  types.tsx
(+8 files in other folders)
