[package]
name = "lab-3d-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono", "uuid"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
base64 = "0.21"
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
